--- a/package.json
+++ b/package.json
@@ -14,5 +14,23 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.3.7"
-  }
+  },
+  "description": "five-in-row inline game",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nate-river/fir-online.git"
+  },
+  "keywords": [
+    "five-in-row",
+    "fir",
+    "inline",
+    "game"
+  ],
+  "author": "myl",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nate-river/fir-online/issues"
+  },
+  "homepage": "https://github.com/nate-river/fir-online#readme"
 }
